Schedule dashboard timeline fix range and alignment. Fix datepicker delivery date in order screen. Fix table display in schedule admin configuration
Workitems:
#9548 Schedule Dashboard- Timeline View - Display 2 different columns Buyer of the Service & Buyer of the vessel based on the tenant configuration
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C23963

--- a/ShipTech10/app/app-general-components/assets/css/custom.css
+++ b/ShipTech10/app/app-general-components/assets/css/custom.css
@@ -2039,6 +2039,10 @@ span.input-group-addon.im_group {
     display: table !important;
 }
 
+.custom-hardcoded-table.schedule-columns table.table-body {
+	min-width: 0px !important;
+}
+
 .custom-hardcoded-table .table-head td, .custom-hardcoded-table .table-body td {
     padding: 1px;
     border: 1px solid #e2e6ea;
